# mailer

./: .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  diesel.toml
go-client/: client.go  doc.go  send.go  status.go  template.go  unsubscribe.go
migrations/2018-08-24-031034_initdb/: up.sql
server/: .dockerignore  README.md
server/src/: lib.rs  macros.rs  mailer.rs  main.rs  sweeper.rs
server/src/db/: mod.rs
server/src/web/: base.html  endpoints.rs  index.html  main.css  mod.rs  unsubscribe-err.html  unsubscribe-ok.html
src/: errors.rs  lib.rs  mailer.rs  main.rs  sweeper.rs  util.rs
src/db/: mod.rs  schema.rs
src/web/: base.html  endpoints.rs  mod.rs  unsubscribe.html
