[package]
name = "mailer"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", default_features = false, features = ["mysql", "r2d2", "serde_json"] }
dotenv = "0.13.0"
failure = "0.1.1"
futures = "0.1.23"
lettre = "0.8.2"
lettre_email = "0.8.2"
log = "0.4.3"
serde = "1.0.74"
serde_derive = "1.0.74"
serde_json = "1.0.26"
structopt = "0.2.10"
syslog = "4.0.0"
tera = "0.11.12"
tokio-threadpool = "0.1.5"
warp = "0.1.2"
tokio = "0.1.7"
url = "1.7.1"
